# pleopod

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py  serve.py
app/agents/: audio_config.py  audio_generation.py  base.py  fact_verifier.py  orchestration.py  prompts.py  publisher.py  research.py  research_review.py  script_writer.py  thumbnail.py  topic_scout.py  video_render.py  youtube_upload.py
app/api/: deps.py
app/core/: config.py  json_utils.py  security.py  text.py  tts.py
app/db/: interfaces.py  queue.py  repositories.py  session.py  sqlite_schema.py
app/models/: enums.py
docs/: api.md  architecture.md  backend-report.md  remotion-video-system.md  system-flow.md  youtube-upload-system.md
remotion-renderer/: README.md  package-lock.json  package.json  sample-payload.json  sample-video-plan.json  tsconfig.json
scripts/: generate_podcast.py
supabase/: README.md
tests/: test_admin_jobs.py  test_audio_config.py  test_audio_generation.py  test_audio_service.py  test_autopublish.py  test_config.py  test_fake_provider.py  test_gemini_provider.py  test_generate_podcast_script.py  test_local_sqlite_backend.py  test_openai_provider.py  test_orchestration.py  test_repositories.py  test_research_agent.py  test_script_writer.py  test_stage_runner.py  test_storage.py  test_supabase_jwt.py  test_text_utils.py  test_topic_scout.py  test_video_render.py  test_worker_runner.py  test_youtube_upload.py  test_youtube_uploader_auth.py
youtube-uploader/: README.md  sample-manifest.json
(+35 files in other folders)
